--- a/resources/loading-bar/styles.css
+++ b/resources/loading-bar/styles.css
@@ -9,7 +9,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 4px;
+    height: 0.25rem;
     background-color: #ffffff00;
     opacity: 1;
     transition: opacity 1s;
